fix. stream.toList() 사용